--- a/views/layouts/home/sections/contact-form.ejs
+++ b/views/layouts/home/sections/contact-form.ejs
@@ -17,7 +17,7 @@
                         id="name" placeholder="Your Name">
                     <input type="email" name="email" placeholder="Enter email"
                         class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
-                    <textarea name="description"
+                    <textarea name="message"
                         class="w-full h-44 resize-none relative py-4 px-6 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
                         id="description" maxlength="200" placeholder="Why you want to join E-cell?"></textarea>
                     <button type="submit"
