--- a/views/layouts/dashboard/event-create.ejs
+++ b/views/layouts/dashboard/event-create.ejs
@@ -26,7 +26,7 @@
         <!-- ./Statistics Cards -->
 
         <!-- Event Edit Form -->
-        <%- include("./sections/event-edit-form.ejs") %> 
+        <%- include("./sections/event-create-form.ejs") %> 
         <!-- ./Event Edit Form -->
 
         <!-- External resources -->
@@ -35,7 +35,7 @@
       </div>
     </div>
   </div>
-  <% const event_name = event.id %> 
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.9/flatpickr.min.js"></script>
   <!-- Scripts -->
   <%- include("./sections/scripts.ejs") %>   
@@ -53,7 +53,7 @@
       ev.preventDefault();
       let myForm = ev.target;
       const data = convertFD2JSON(new FormData(myForm));
-      // console.log(data);
+      console.log(data);
       const newFormData = {
         organizers: [
           {
@@ -158,7 +158,8 @@
         event_ends: data.event_ends,
         result_declaration: data.result_declaration,
       }
-      fetch("/dashboard/events/<%= event_name %>/edit", {
+      
+      fetch("/dashboard/event-create", {
         body: JSON.stringify(newFormData),
         method: "POST",
         headers: {
