--- a/views/layouts/home/sections/event-sponsors.ejs
+++ b/views/layouts/home/sections/event-sponsors.ejs
@@ -1,36 +1,36 @@
-<div id="organizers" class="flex justify-center items-center wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
+<div id="sponsors" class="flex justify-center items-center wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
   <div id="team_members" class="mt-10">
     <div class="flex flex-col">
       <div class="mb-4 section-title">
         <div class="mx-auto line"></div>
-        <h1 class="text-4xl font-bold text-center">Organizers</h1>
+        <h1 class="text-4xl font-bold text-center">Sponsors</h1>
       </div>
       <div class="mt-4 content-center mx-10 grid gap-8 lg:grid-cols-3 grid-cols-1">
         <!-- green border color is for team members -->
         <% let count = 0 %>
-        <% for (const org of foundEvent.organizers) { %>
-          <% if (org.name !== "" && org.name) { %>
+        <% for (const sponsor of foundEvent.sponsors) { %>
+          <% if (sponsor.name !== "" && sponsor.name) { %>
           <div data-aos="fade-up"
             class="max-w-sm w-80 h-96 layered-card bg-white duration-200 border-2 rounded border-transparent hover:border-green-600">
             <div class="team-item p-3">
               <div class="team-img relative">
                 <img class="object-contain rounded"
-                  src="<%= org.pic %>"
+                  src="<%= sponsor.pic %>"
                   alt="">
                 <div class="team-overlay">
                   <ul class="flex justify-center space-x-2 text-2xl">
                     <li>
-                      <a href="<%= org.fb_link %>">
+                      <a href="<%= sponsor.fb_link %>">
                         <i class="hover:text-blue-800 duration-200 fab fa-facebook"></i>
                       </a>
                     </li>
                     <li>
-                      <a href="<%= org.ig_link %>">
+                      <a href="<%= sponsor.ig_link %>">
                         <i class="hover:text-red-500 duration-200 fab fa-instagram"></i>
                       </a>
                     </li>
                     <li>
-                      <a href="<%= org.in_link %>">
+                      <a href="<%= sponsor.in_link %>">
                         <i class="hover:text-purple-800 duration-200 fab fa-linkedin"></i>
                       </a>
                     </li>
@@ -39,10 +39,10 @@
               </div>
               <div class="text-center px-5 py-3 capitalize">
                 <h3 class="team-name">
-                  <%= org.name %>
+                  <%= sponsor.name %>
                 </h3>
                 <p>
-                  <%= org.designation %>
+                  <%= sponsor.designation %>
                 </p>
               </div>
             </div>
